manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: exercises
  labels:
    name: exercises
