manifests/deployment_log.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-depl
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-read
          image: PROJECT/IMAGE_LOR
          readinessProbe:
           initialDelaySeconds: 15 # Initial delay until the readiness is tested
           periodSeconds: 15 # How often to test
           httpGet:
            path: /healthz
            port: 5000
          volumeMounts:
            - name: shared-logs
              mountPath: /tmp/kube
            - name: confmap-vol
              mountPath: /etc/config

        - name: log-output-gen
          image: PROJECT/IMAGE_LOG
          volumeMounts:
            - name: shared-logs
              mountPath: /tmp/kube

      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: confmap-vol
          configMap:
            name: exercises-confmap
            #persistentVolumeClaim:
              #claimName: logs-pong-claim
