manifests/deployment_pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-depl
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
      - name: ping-pong-app
        image: PROJECT/IMAGE_PPA
        imagePullPolicy: Always
        readinessProbe:
          initialDelaySeconds: 15 # Initial delay until the readiness is tested
          periodSeconds: 15 # How often to test
          httpGet:
            path: /healthz
            port: 5000
        ports:
          - containerPort: 5000
