manifests/service_pong.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
