manifests/service_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: db-port
  clusterIP: None
  selector:
    app: postgres
