manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: exercises-route
  namespace: exercises
spec:
  parentRefs:
    - name: exercises-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pings
      backendRefs:
        - name: ping-pong-app-svc
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch      
              replacePrefixMatch: /
      backendRefs:
        - name: ping-pong-app-svc
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          port: 80
